# clipboard-sync

./: .prettierrc  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
