[package]
name = "clipboard-sync"
version = "0.1.0"
description = "Easily sync your clipboard between devices. This is a work in progress app."
authors = [ "Steveplays28" ]
license = "GPLv3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.3", features = ["api-all"] }
tungstenite = "0.17.2"
log = "0.4.14"
console_log = { version = "0.2", features = ["color"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
